--- a/src/app/pages/albums/individual/individual.component.css
+++ b/src/app/pages/albums/individual/individual.component.css
@@ -1,3 +1,29 @@
-button{
-    width: 10em;
+.mat-icon {
+  width: 2em !important;
+  height: 2em !important;
+  font-size: 2em !important;
+}
+button {
+  margin-inline: 2em;
+}
+
+.album-image {
+  display: flex;
+  flex-direction: row;
+}
+
+.image-button {
+  display: flex;
+  flex-direction: column;
+}
+
+.button{
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+}
+div {
+  margin: 1em;
 }
