--- a/src/app/templates/footer/footer.component.html
+++ b/src/app/templates/footer/footer.component.html
@@ -1,21 +1,19 @@
 <section >
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      {{ footer.state?.readableCurrentTime }}
-      <mat-slider class="time-slider" min="0" [max]="footer.state?.duration" step="1" (input)="footer.onSliderChangeEnd($event)" [disabled]="footer.state?.error || footer.currentFile.index === undefined"></mat-slider>
-      {{ footer.state?.readableDuration }}
+  <mat-toolbar *ngIf="footer.queue.length!==0">
+    <mat-toolbar-row >
+      {{footer.nowPlaying.file.title}} - {{footer.queue[footer.nowPlaying.album].member?.name}} {{footer.queue[footer.nowPlaying.album].subunit?.name}}
     </mat-toolbar-row>
     <mat-toolbar-row class="media-action-bar">
-      <button mat-button [disabled]="footer.isFirstPlaying()" (click)="footer.previous()">
-        <mat-icon mat-list-icon>skip_previous</mat-icon>
+      <button mat-button [disabled]="footer.isFirstPlayingCopy() || footer.queue.length===0" (click)="footer.previous()">
+        <mat-icon mat-list-icon >skip_previous</mat-icon>
       </button>
-      <button mat-button (click)="footer.play()" [disabled]="footer.state?.error" *ngIf="footer.state?.playing">
-        <mat-icon mat-list-icon>play_circle_filled</mat-icon>
+      <button mat-button (click)="footer.play()" [disabled]="footer.state?.error || footer.queue.length===0" *ngIf="!footer.state?.playing">
+        <mat-icon mat-list-icon> play_arrow</mat-icon>
       </button>
-      <button mat-button (click)="footer.pause()" *ngIf="footer.state?.playing">
-        <mat-icon mat-list-icon>pause</mat-icon>
+      <button mat-button (click)="footer.pause()" *ngIf="footer.state?.playing" [disabled]=" footer.queue.length===0" >
+        <mat-icon mat-list-icon >pause</mat-icon>
       </button>
-      <button  mat-button [disabled]="footer.isLastPlaying()" (click)="footer.next()">
+      <button  mat-button [disabled]="footer.isLastPlayingCopy() || footer.queue.length===0" (click)="footer.next()">
         <mat-icon mat-list-icon>skip_next</mat-icon>
       </button>
     </mat-toolbar-row>
