--- a/src/app/pages/albums/individual/individual.component.html
+++ b/src/app/pages/albums/individual/individual.component.html
@@ -1,9 +1,20 @@
 <section>
+
   <h1> {{albumService.album.title}} - <ng-container *ngIf="albumService.album.member">{{albumService.album.member.name}}</ng-container><ng-container *ngIf="albumService.album.subunit">{{albumService.album.subunit.name}}</ng-container> </h1>
-  <img src="assets/albums/{{albumService.album.picture}}" height="500em" alt="{{albumService.album.picture}}">
-  <button (click)="play()">Jouer</button><button>Ajouter</button>
-  <ul *ngFor="let song of albumService.album.songs">
-    <li> {{song.title}} <ng-container *ngIf="song.featuring?.length!=0"> ft.<ng-container *ngFor="let feat of song.featuring"> {{feat.name}} </ng-container></ng-container>  </li>
-  </ul>
+  <div class="album-image">
+    <div class="image-button">
+      <img src="assets/albums/{{albumService.album.picture}}" height="500em" alt="{{albumService.album.picture}}">
+      <div class="media-action-bar">
+        <button mat-icon-button (click)="play()"><mat-icon mat-list-icon> play_circle</mat-icon></button><button mat-icon-button (click)="add()"><mat-icon>playlist_add</mat-icon></button>
+      </div>
+    </div>
+    <div>
+      <h2> Titres</h2>
+      <ul *ngFor="let song of albumService.album.songs">
+        <li> {{song.title}} <ng-container *ngIf="song.featuring?.length!=0"> ft.<ng-container *ngFor="let feat of song.featuring"> {{feat.name}} </ng-container></ng-container>  </li>
+      </ul>
+    </div>
+
+  </div>
 
 </section>
