--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 </header>
 <main>
-  <router-outlet></router-outlet>
+  <router-outlet></router-outlet> <app-queue></app-queue>
 </main>
 <footer>
   <app-footer></app-footer>
