--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ header{
   right: 0;
   width: 100vw;
   height: 7em;
+  z-index: 10;
 }
 body {
   color: aliceblue;
@@ -20,7 +21,13 @@ body {
 
 }
 
+ul {
+  list-style-type: none;
+}
+
 main {
+  display: flex;
+  flex-direction: row;
   padding-bottom: 7em;
   padding-top: 7em;
 }
@@ -30,7 +37,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 5em;
+  height: 7em;
   width: 100vw;
   color: aliceblue;
 }
@@ -48,4 +55,16 @@ footer {
 
 .route:hover{
   cursor: pointer;
+}
+
+.queue {
+  position: fixed;
+  right: 0;
+  top: 7em;
+  bottom: 7em;
+  padding-inline: 2em;
+}
+
+.center {
+  width: 100vw;
 }
