update accueil and members

--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -1,1 +1,14 @@
-<p>accueil works!</p>
+<section>
+  <img src="assets/utils/kpop-loona.gif" alt="moon" style="display: block; margin-left: auto;  margin-right: auto;">
+  <h1 class="title"> WELCOME TO THE LOONNAVERSE</h1>
+  <h3> On this web site, you can navigate trough the members and subunits infromations but also listen to their music on the album tab.</h3>
+  <p> Loona is 12members korean girl group. They have a very interesting and intricate lore.</p>
+  <p> From the korean name 이달의 소녀, Loona has two meanings: Girl of the month and Girl of the moon.</p>
+  <h2> GIRL OF THE MONTH</h2>
+  <p>At the beginning of Loona, each month a new member or subunit was introduced. Every member was introduce with a solo album single and had their own music video</p>
+  <h2> GIRL OF THE MOON</h2>
+  <p> Loona has a strong connexion with the moon's phases. At the beginning of all music video, you can see the moon changing.</p>
+  <img src="assets/utils/logo.gif"  height="200em" alt="logo">
+  <p> Enjoy your time on the web site !</p>
+  <img src="assets/utils/loona-kpop.gif" alt="wave">
+</section>
