--- a/src/app/pages/albums/albums.component.html
+++ b/src/app/pages/albums/albums.component.html
@@ -1,5 +1,5 @@
 <section class="center" >
-  <h1> Albums</h1>
+  <h1 class="title"> Albums</h1>
   <ng-container *ngFor="let y of year">
     <h2>{{y}}</h2>
     <div class="row">
