--- a/src/app/pages/subunits/individual/individual.component.html
+++ b/src/app/pages/subunits/individual/individual.component.html
@@ -1,6 +1,6 @@
 <section class="unit">
   <div class="profil">
-    <h1> {{subunitService.subunit.name}} </h1>
+    <h1 class="title"> {{subunitService.subunit.name}} </h1>
     <img src="assets/profils/{{subunitService.subunit.picture}}" height="500em" alt="profil picture">
     <p> Début : {{subunitService.subunit.debut}}</p>
   </div>
