--- a/src/app/pages/albums/individual/individual.component.html
+++ b/src/app/pages/albums/individual/individual.component.html
@@ -1,6 +1,6 @@
 <section class="center">
 
-  <h1> {{albumService.album.title}} - <ng-container *ngIf="albumService.album.member">{{albumService.album.member.name}}</ng-container><ng-container *ngIf="albumService.album.subunit">{{albumService.album.subunit.name}}</ng-container> </h1>
+  <h1 class="title"> {{albumService.album.title}} - <ng-container *ngIf="albumService.album.member">{{albumService.album.member.name}}</ng-container><ng-container *ngIf="albumService.album.subunit">{{albumService.album.subunit.name}}</ng-container> </h1>
   <div class="album-image">
     <div class="image-button">
       <img src="assets/albums/{{albumService.album.picture}}" height="500em" alt="{{albumService.album.picture}}">
