--- a/src/app/pages/members/individual/individual.component.html
+++ b/src/app/pages/members/individual/individual.component.html
@@ -1,12 +1,32 @@
-
+<h1 class="title" style="color: #{{memberService.member.color}}"> {{memberService.member.name}}</h1>
 <section>
-  <h1> {{memberService.member.name}}</h1>
-  <img src="assets/profils/{{memberService.member.picture}}" height="500em" alt="profil picture">
-  <p>Debut : {{memberService.member.debut}}</p>
-  <p>Animal représentatif : {{memberService.member.animal}}</p>
-  <p> Couleur et forme : {{ memberService.member.color}} {{memberService.member.shape}}</p>
+  <div>
+    <img src="assets/profils/{{memberService.member.picture}}" height="500em" alt="profil picture">
 
-  <p *ngIf="memberService.member.country"> Pays Representatif : {{ memberService.member.country}} </p>
-  <p *ngIf="memberService.member.power"> Pouvoir : {{ memberService.member.power}} </p>
-  <p *ngIf="memberService.member.fruit"> Fruit Representatif : {{ memberService.member.fruit}} </p>
+  </div>
+  <div>
+    <p>Debut : {{memberService.member.debut}}</p>
+    <p> Nationality <img src="assets/utils/{{memberService.member.nationality}}.png" height="50em"> </p>
+    <p>Representative Animal : {{memberService.member.animal}}</p>
+    <p class="color" style="background: #{{memberService.member.color}}">  Color: {{ memberService.member.color}} </p>
+    <p>Shape {{memberService.member.shape}}</p>
+
+    <p *ngIf="memberService.member.country"> Representative Country : {{ memberService.member.country}} </p>
+    <p *ngIf="memberService.member.power"> Power : {{ memberService.member.power}} </p>
+    <p *ngIf="memberService.member.fruit">  Representative Fruit : {{ memberService.member.fruit}} </p>
+  </div>
+  <div>
+    <h2> Albums</h2>
+    <div class="row">
+      <div *ngFor="let album of memberService.albums">
+        <img src="assets/albums/{{album.picture}}" alt="album" height="200em" routerLink="/album/{{album.id}}">
+        <p>{{album.title}}</p>
+      </div>
+
+    </div>
+
+  </div>
+
+
+
 </section>
