--- a/src/app/pages/subunits/subunits.component.html
+++ b/src/app/pages/subunits/subunits.component.html
@@ -1,3 +1,4 @@
+<h1 class="title"> SubUnits</h1>
 <section class="row">
   <div *ngFor="let subunit of subunitService.subunits">
     <img src="assets/profils/{{subunit.picture}}" height="400em" alt="profil picture" class="route" routerLink="/subunit/{{subunit.id}}">
